# CheezyClash

./: .gitattributes  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/actions/libclash/: action.yml
.github/workflows/: build-core.yml  bump-mihomo.yml  desktop.yml  pr-check.yml  release.yml
app/: .gitignore  build.gradle.kts  google-services.json  google-services.json.example  proguard-rules.pro  version.properties
app/src/debug/res/values/: colors.xml  strings.xml
app/src/debug/res/values-night/: colors.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: cloudflare_24.xml  direct_24.xml  discord_24.xml  games_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_tile.xml  instagram_24.xml  intellegence_24.xml  telegram_24.xml  vpn_lock_24.xml  youtube_24.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: colors.xml
app/src/open/: AndroidManifest.xml
baselineprofile/: README.md  build.gradle.kts
core/: build.gradle.kts  consumer-rules.pro
core/src/main/cpp/: CMakeLists.txt  bridge_helper.c  bridge_helper.h  jni_helper.c  jni_helper.h  main.c
core/src/main/cpp/includes/: libclash.h
core/src/main/golang/: go.mod  go.sum
desktop/: README.md  build.gradle.kts  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
desktop/docs/: dns-sanity.md  private-module.md
desktop/helper/: go.mod  go.sum  main.go  main_unix.go  main_windows.go
desktop/resources/core/: .gitkeep
desktop/scripts/: after-pack.mjs  allow-firewall.ps1  build-core.mjs  build-helper.mjs  fetch-core.mjs  go-hash.mjs  mihomo-version.mjs  rasterize-icons.mjs  smoke-proxy.mjs  sync-version.mjs
desktop/src/main/: core-manager.ts  helper.ts  index.ts  logger.ts  mihomo-api.ts  mihomo-label.ts  paths.ts  private-module.ts  private-sync.ts  privileges.ts  processes.ts  profile-events.ts  profiles.ts  store.ts  subscription-updater.ts  subscription.ts  system-proxy.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/: index.html
desktop/src/renderer/src/: App.tsx  env.d.ts  index.css  main.tsx  window.d.ts
desktop/src/shared/: private-api.ts  types.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+130 files in other folders)
